--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde_bytes = "0.11.9"
 # verison that supports making links between pages:
 printpdf = { git = "https://github.com/chipsenkbeil/printpdf" }
 chrono = "0.4"
+rand = "0.8"  # Use the latest compatible version
+getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
 
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
