--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ wasm-bindgen-test = "0.3.34"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+# panic = "abort"
